# pinochle

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  cargo.toml  style.css
.devcontainer/: Dockerfile  Dockerfile-reference  devcontainer.json
client/: Cargo.toml  README.md  index.html  main.js  style.css
client/.cargo/: Config.toml
client/src/: app.rs
client/src/app/: connect.rs  game_component.rs  ready.rs
client/src/app/game_component/: connect.rs  playing.rs
client/src/app/game_component/component/: bid.rs  card.rs  hand.rs  mod.rs  pass_cards.rs
client/src/app/game_component/input/: bid.rs  mod.rs
lib/: Cargo.toml
lib/src/: board.rs  command.rs  commands.rs  core.rs  game.rs  lib.rs
lib/src/game/: core.rs  states.rs
pinochle_lib/: Cargo.toml
pinochle_lib/src/: lib.rs
pinochle_server/: Cargo.toml
pinochle_server/src/: main.rs
pkg/: bundle.js  pinochle_client.js  pinochle_client_bg.wasm
server/: Cargo.toml
server-logic/: Cargo.toml
server-logic/src/: lib.rs  room.rs
server/src/: game.rs  main.rs
server/src/table/: game.rs  mod.rs
src/: main.rs
web-client/: Cargo.toml  index.html
web-client/src/: app.rs
