[package]
authors = [
    "Sheyne Anderson <sheyne@sheyne.com>"
]
description = "Yew client for the pinochle-websocket server"
edition = "2018"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
name = "pinochle-client"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = { version = "0.14", features = ["web_sys"] }
web-sys = { version = "0.3.4", features = ["Window"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
pinochle-lib = { path = "../lib" }
strum = "0.18"
strum_macros = "0.18"

