[package]
name = "pinochle-lib"
version = "0.1.0"
authors = ["Sheyne Anderson <sheyne@sheyne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.18"
strum_macros = "0.18"
itertools = "0.9"
rand = "0.7"
either = {version = "1.5", features = ["serde", "use_std"]}