[package]
name = "pinochle_lib"
version = "0.1.0"
authors = ["Sheyne Anderson <sheyne@sheyne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.17.1"
strum_macros = "0.17.1"
itertools = "0.8.2"
