[package]
name = "server-logic"
version = "0.1.0"
authors = ["Sheyne Anderson <sheyne@sheyne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = [ "async-await" ] }
warp = "0.2"
pinochle-lib = { path = "../lib" }
serde_json = "1.0"