[package]
authors = [
    "Sheyne Anderson <sheyne@sheyne.com>"
]
description = "Yew client for the pinochle-websocket server"
edition = "2018"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
license = "MIT"
name = "pinochle-client"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.8"
failure = "0.1.6"
serde = "1.0"
serde_json = "1.0"